--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 		<main>	
 			<h2 class="titulo">Home</h2>						
 			
-			<h2 class="sub-titulo">Olá Mundo! Eu Rafael Neto!</h2>
+			<h2 class="sub-titulo">Olá Mundo! Eu sou Rafael Neto!</h2>
 			<p class="sub-titulo">atualmente tenho 21 anos!</p>			
 							
 			<p class="textos">
@@ -39,7 +39,7 @@
 			</p> <br>
 
 			<p class="textos">
-				Bom, eu sou nascido e criado em <em>Salvador - BA - Brasil</em>. Minha pixão pela programação começou a muito tempo, eu sempre gostei de computador, passei a minha juventude toda jogando e estudando daí assistir um documentário do ex-presidente <em><a href="https://pt.wikipedia.org/wiki/Barack_Obama" target="_blank">Barack Obama</a></em> eu assistir isso passando em algum jornal <a href="https://www.youtube.com/watch?v=zKkfF1QthZc&ab_channel=AnimobyGames" target="_blank"><em>clique aqui</em></a> pra asssitir o video. Fiquei curioso sobre o assunto pensei <em>"Como assim? Programe?"</em> eu lembro que fui correr no dia e fiquei com aquelas palavras em minha cabeça.
+				Bom, eu sou nascido e criado em <em>Salvador - BA - Brasil</em>. Minha paixão pela programação começou a muito tempo, eu sempre gostei de computador, passei a minha juventude toda jogando e estudando daí assistir um documentário do ex-presidente <em><a href="https://pt.wikipedia.org/wiki/Barack_Obama" target="_blank">Barack Obama</a></em> eu assistir isso passando em algum jornal <a href="https://www.youtube.com/watch?v=zKkfF1QthZc&ab_channel=AnimobyGames" target="_blank"><em>clique aqui</em></a> pra asssitir o video. Fiquei curioso sobre o assunto pensei <em>"Como assim? Programe?"</em> eu lembro que fui correr no dia e fiquei com aquelas palavras em minha cabeça.
 			</p> <br>
 					
 			<p class="textos">
