--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 			<h2 class="titulo">Home</h2>						
 			
 			<h2 class="sub-titulo">Olá Mundo! Eu sou Rafael Neto!</h2>
-			<p class="sub-titulo">atualmente tenho 21 anos!</p>			
+			<p class="sub-titulo">Atualmente tenho 21 anos!</p>			
 							
 			<p class="textos">
 				Algumas pessoas constumam me chamar de Neto. Mas na faculdade sou conhecido como Neto, devido a muitos alunos chamados Rafael que existem na classe. Lá parece aquele epsódio de Power Ranger na hora que aparece todos os Rangers vermelho sabe? Haha'
@@ -55,7 +55,7 @@
 			</p> <br>
 
 			<p class="textos">
-				Algumas das frases que eu mais me identifico do meu autor favorito Napoleon Hill, diz que:
+				Algumas das frases que eu mais me identifico do meu autor favorito, Napoleon Hill, diz que:
 			</p>
 				
 				<blockquote  class="lado"><em>"Tudo o que a mente humana pode conceber, ela pode conquistar. Não devemos ter medo das novas idéias! Elas podem significar a diferença entre o triunfo e o fracasso. Quem desiste nunca vence e só vence quem nunca desiste." </em><br>- Napoleon Hill</blockquote> 
