Inserindo novos comentarios

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 			</p> <br>
 					
 			<p class="textos">
-				Encontrei uma oportunidade de cursar editor gráfico, pensei <em>"Acredito que ao eu fazer este curso que é o basico de designer gráfico terei uma mente mais aberta sobre criatividade. e como fazer um bom acababemto de meus futuros projetos"</em>. Minha rotina era bem legal. Durante a manhã eu passava estudando e jogando. Saia de casa as 11:30hrs para estar no <a href="http://www.senaicimatec.com.br/"  target="_blank"> Senai - Cimatec</a> às 13h. Sempre bem atencioso e dedicado. Lá eu tive excelentes professores, destaco 2 deles que me ajudaram muito em minha carreira <em>"Levi"</em> e <em>"Paulo"</em>. Professor <em>"Paulo"</em> além de ter sido meu professor foi o meu chefe em sua gráfica.
+				Encontrei uma oportunidade de cursar editor gráfico no ano de 2018, pensei <em>"Acredito que ao eu fazer este curso que é o basico de designer gráfico terei uma mente mais aberta sobre criatividade. e como fazer um bom acababemto de meus futuros projetos"</em>. Minha rotina era bem legal. Durante a manhã eu passava estudando e jogando. Saia de casa as 11:30hrs para estar no <a href="http://www.senaicimatec.com.br/"  target="_blank"> Senai - Cimatec</a> às 13h. Sempre bem atencioso e dedicado. Lá eu tive excelentes professores, destaco 2 deles que me ajudaram muito em minha carreira <em>"Levi"</em> e <em>"Paulo"</em>. 6 meses depois no final do curso, eu conseguir um estágio em um programa de bolsa de estudos para eu trabalhar na parte de crianção de cards dos cursos que estavam sendo disponibilizados pela bolsas de estudos para as respectivas faculdades. O professor <em>"Paulo"</em> além de ter sido meu professor foi o meu chefe em sua gráfica no final do ano de 2019, junto com seu coordenador <em>"Márcio Gomes"</em> que me ajudou muito a desenvoler minhas habilidades como Designer Gráfico.
 			</p><br>
 
 			<p class="textos">
@@ -51,7 +51,7 @@
 			</p> <br>
 
 			<p class="textos">
-				Um ano depois, entrei na faculdade e me sentir bem feliz e realizado, ao ver que eu estava dando um grande passo para me aproximar de um grande objetivo pessoal meu.
+				No ano primeiro semestre de 2019, entrei na faculdade iniciando o curso de Análise e Desenvolvimento de Sistemas, e me sentir bem feliz e realizado, ao ver que eu estava dando um grande passo para me aproximar de um grande objetivo pessoal meu.
 			</p> <br>
 
 			<p class="textos">
@@ -86,7 +86,7 @@
 						<a class="ins-ic" href="https://www.instagram.com/neto_rnc/" target="_blank">
 							<i class="fab fa-instagram"> <img src="instagram.png"></i>
 						</a>
-	
+						<!--Github -->
 						<a class="li-ic" href="https://github.com/neto1920" target="_blank">
 							<i class="fab fa-github"><img src="github.png"></i>
 						</a>
